. [NEW] Scheduler: It is possible to schedule blocks too.
. [NEW] Tests: Added 'JS CocosDragon'. Shows the power of CocosBuilder + JS
. [FIX] Actions: TargetedAction can be copied. Calls super correctly
		Blink: "stop" restores original "visibility" state
		BezierTo: works with Repeat (issue #1008)
. [FIX] Director: Fixed possible retain cycle with the delegate
		Fixed possible crash when purgeCacheData is called before the view is initialized (issue #1440)
. [FIX] Dispatcher: Queueing nested events works as expected (issue #1279, #1410)
. [FIX] Director: Returns correct GL value for coordinates event in custom projections
. [FIX] Documentation: Fixes DrawingPrimitives doc (issue #1409)
. [FIX] GL Cache: when texture is deleted, it is removed form teh GL cache (issue #1429)
. [FIX] LabelAtlas: Honors the directory of the .plist file when loading the .png file
. [FIX] LabelBMFont: Does not crash if it can't parse the FNT. Instead it logs an error and return nil
		contextSize honors shadows and strokes
. [FIX] LabelTTF: It is possible to set an empty string
. [FIX] Layer: API improvements
		setIsKeyboardEnabled -> setKeyboardEnabled
		setIsMouseEnabled -> setMouseEnabled
		setIsTouchEnabled -> setTouchEnabled
		setIsAccelerometerEnabled -> setAccelerometerEnabled
		Old methods can be called, but are deprecated.
		New way to enable "targeted" touches: [self setTouchMode:kCCTouchOneByOne];
. [FIX] LayerColor: uses correct default blending function (issues #1422 #1423)
. [FIX] Particle: Honors the directory of the .plist file when loading the .png file
. [FIX] Scheduler: API improvements:
		unscheduleAllSelectors -> unscheduleAll (since it also unschedules blocks)
		unscheduleAllSelectorsForTarget -> unscheduleAllForTarget (since it also unschedules blocks)
		Old methods can be called, but are deprecated.
. [FIX] Templates: Autoration can be overriden in runtime on iOS 6
		Fixed some grammar errors
. [FIX] Tests: Watermelon With Me uses new Chipmunk API